up to fixed points

--- a/biblio.bib
+++ b/biblio.bib
@@ -354,3 +354,11 @@
   publisher={American Mathematical Soc.}
 }
 
+@MISC{vanname2021,
+    TITLE = {Medians in lattice theory},
+    AUTHOR = {Joseph Van Name (https://mathoverflow.net/users/22277/joseph-van-name)},
+    HOWPUBLISHED = {MathOverflow},
+    NOTE = {URL:https://mathoverflow.net/q/405400 (version: 2021-10-03)},
+    EPRINT = {https://mathoverflow.net/q/405400},
+    URL = {https://mathoverflow.net/q/405400}
+}
